fixed spacing issue in recents

--- a/app/static/css/boomer.css
+++ b/app/static/css/boomer.css
@@ -225,12 +225,13 @@ body {
   height: 0;
   padding: 0px;
   margin: 0px;
+  display: none;
 }
 .radio-text-buttons label {
   display: inline-block;
   height: 44px;
   width: 480px;
-  padding: 6px 0px;
+  padding: 6px 0px 0px 6px;
   margin: 12px 0px;
   text-align: left;
   vertical-align: middle;
@@ -239,6 +240,8 @@ body {
   background-color: #555555;
   border: 4px solid #494949;
   border-radius: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .radio-text-buttons input[type="radio"]:checked + label {
   background-color: black;
